force-app/main/default/objects/Compliance_Task__c/Compliance_Task__c.object-meta.xml
<CustomObject>
    <label>Compliance Task</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Compliance Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>