force-app/main/default/objects/Compliance_Task__c/fields/Provider_Application__c.field-meta.xml
<CustomField>
    <fullName>Provider_Application__c</fullName>
    <label>Provider Application</label>
    <type>Lookup</type>
    <referenceTo>Provider_Application__c</referenceTo>
    <relationshipLabel>Compliance Tasks</relationshipLabel>
    <relationshipName>Compliance_Tasks</relationshipName>
</CustomField>