force-app/main/default/objects/Compliance_Task__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <type>Text</type>
    <length>100</length>
</CustomField>